k8s-config/telemetry.tmpl.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: telemetry-gateway
  namespace: istio-system
  labels:  # can't use anchors across YAML documents unfortunately
    name: "telemetry-gateway"
    branch: $FEATURE_NAME
    environment: "$ENV"
    application: "telemetry-gateway"
    tier: "web"
    costcenter: "$COST_CENTRE"
    supportemail: "aunzcontinuousdeliveryteam_at_equifax.com"
    compliancedomain: ""
    dataclass: "2"
    provisionedby: "jenkins"
    byolsoftware: ""
    buildversion: "$BUILD_VERSION"
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 443
      name: https-telemetry
      protocol: HTTPS
    tls:
      mode: SIMPLE
      serverCertificate: /etc/istio/$INGRESS_GW_SSL_SECRET_NAME/tls.crt
      privateKey: /etc/istio/$INGRESS_GW_SSL_SECRET_NAME/tls.key
    hosts:
    - "*.telemetry.$ENV.$DNS"
  - hosts:
    - "*.telemetry.$ENV.$DNS"
    port:
      number: 80
      name: http-telemetry
      protocol: HTTP
    tls:
      httpsRedirect: true
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kiali-vs
  namespace: istio-system
  labels:  # can't use anchors across YAML documents unfortunately
    name: "kiali-vs"
    branch: $FEATURE_NAME
    environment: "$ENV"
    application: "kiali-vs"
    tier: "web"
    costcenter: "$COST_CENTRE"
    supportemail: "aunzcontinuousdeliveryteam_at_equifax.com"
    compliancedomain: ""
    dataclass: "2"
    provisionedby: "jenkins"
    byolsoftware: ""
    buildversion: "$BUILD_VERSION"
spec:
  hosts:
  - "$KIALI_DOMAIN"
  gateways:
  - telemetry-gateway
  http:
  - match:
    - port: 443
    route:
    - destination:
        host: kiali
        port:
          number: 20001
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: kiali
  namespace: istio-system
  labels:  # can't use anchors across YAML documents unfortunately
    name: "kiali"
    branch: $FEATURE_NAME
    environment: "$ENV"
    application: "kiali"
    tier: "web"
    costcenter: "$COST_CENTRE"
    supportemail: "aunzcontinuousdeliveryteam_at_equifax.com"
    compliancedomain: ""
    dataclass: "2"
    provisionedby: "jenkins"
    byolsoftware: ""
    buildversion: "$BUILD_VERSION"
spec:
  host: kiali
  trafficPolicy:
    tls:
      mode: DISABLE

---


---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: grafana-vs
  namespace: istio-system
  labels:  # can't use anchors across YAML documents unfortunately
    name: "grafana-vs"
    branch: $FEATURE_NAME
    environment: "$ENV"
    application: "grafana-vs"
    tier: "web"
    costcenter: "$COST_CENTRE"
    supportemail: "aunzcontinuousdeliveryteam_at_equifax.com"
    compliancedomain: ""
    dataclass: "2"
    provisionedby: "jenkins"
    byolsoftware: ""
    buildversion: "$BUILD_VERSION"
spec:
  hosts:
  - "$GRAFANA_DOMAIN"
  gateways:
  - telemetry-gateway
  http:
  - match:
    - port: 443
    route:
    - destination:
        host: grafana
        port:
          number: 3000
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: grafana
  namespace: istio-system
  labels:  # can't use anchors across YAML documents unfortunately
    name: "grafana"
    branch: $FEATURE_NAME
    environment: "$ENV"
    application: "grafana"
    tier: "web"
    costcenter: "$COST_CENTRE"
    supportemail: "aunzcontinuousdeliveryteam_at_equifax.com"
    compliancedomain: ""
    dataclass: "2"
    provisionedby: "jenkins"
    byolsoftware: ""
    buildversion: "$BUILD_VERSION"
spec:
  host: grafana
  trafficPolicy:
    tls:
      mode: DISABLE

---


---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: tracing-vs
  namespace: istio-system
  labels:  # can't use anchors across YAML documents unfortunately
    name: "tracing-vs"
    branch: $FEATURE_NAME
    environment: "$ENV"
    application: "tracing-vs"
    tier: "web"
    costcenter: "$COST_CENTRE"
    supportemail: "aunzcontinuousdeliveryteam_at_equifax.com"
    compliancedomain: ""
    dataclass: "2"
    provisionedby: "jenkins"
    byolsoftware: ""
    buildversion: "$BUILD_VERSION"
spec:
  hosts:
  - "$TRACING_DOMAIN"
  gateways:
  - telemetry-gateway
  http:
  - match:
    - port: 443
    route:
    - destination:
        host: tracing
        port:
          number: 80
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: tracing
  namespace: istio-system
  labels:  # can't use anchors across YAML documents unfortunately
    name: "tracing"
    branch: $FEATURE_NAME
    environment: "$ENV"
    application: "tracing"
    tier: "web"
    costcenter: "$COST_CENTRE"
    supportemail: "aunzcontinuousdeliveryteam_at_equifax.com"
    compliancedomain: ""
    dataclass: "2"
    provisionedby: "jenkins"
    byolsoftware: ""
    buildversion: "$BUILD_VERSION"
spec:
  host: tracing
  trafficPolicy:
    tls:
      mode: DISABLE
---
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: prometheus-vs
  namespace: istio-system
  labels:  # can't use anchors across YAML documents unfortunately
    name: "prometheus-vs"
    branch: $FEATURE_NAME
    environment: "$ENV"
    application: "prometheus-vs"
    tier: "web"
    costcenter: "$COST_CENTRE"
    supportemail: "aunzcontinuousdeliveryteam_at_equifax.com"
    compliancedomain: ""
    dataclass: "2"
    provisionedby: "jenkins"
    byolsoftware: ""
    buildversion: "$BUILD_VERSION"
spec:
  hosts:
  - "$PROMETHEUS_DOMAIN"
  gateways:
  - telemetry-gateway
  http:
  - match:
    - port: 443
    route:
    - destination:
        host: prometheus
        port:
          number: 9090
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: prometheus
  namespace: istio-system
  labels:  # can't use anchors across YAML documents unfortunately
    name: "prometheus"
    branch: $FEATURE_NAME
    environment: "$ENV"
    application: "prometheus"
    tier: "web"
    costcenter: "$COST_CENTRE"
    supportemail: "aunzcontinuousdeliveryteam_at_equifax.com"
    compliancedomain: ""
    dataclass: "2"
    provisionedby: "jenkins"
    byolsoftware: ""
    buildversion: "$BUILD_VERSION"
spec:
  host: prometheus
  trafficPolicy:
    tls:
      mode: DISABLE
